--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,12 +13,13 @@ h3 {
 #messages {
   margin: 50px 0;
   border: 1px solid #ddd;
-  border-radius: 6px; 
+  border-radius: 6px;
   padding: 30px;
 }
 
 .message {
   border-radius: 6px;
   padding: 30px;
-  font-size: 18px
+  font-size: 18px;
+  margin-bottom: 30px;
 }
